[package]
name = "cursors"
version = "0.1.0"
edition = "2021"
authors = ["J <linsijia628@gmail.com>"]
description = "A neovim plugin to use multiple cursors"
# repository = "https://github.com/willothy/moveline.nvim"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.8.8", features = ["luajit", "vendored", "module"] }
nvim-utils = "0.1.12"
once_cell = "1.17.1"
