[package]
name = "init-data-rs"
version = "0.1.1"
edition = "2021"
description = "Telegram Mini Apps init data parser and validator for Rust"
license = "MIT"
authors = ["Jie Wang <linsijia628@gmail.com>"]
repository = "https://github.com/escwxyz/init-data-rs"
documentation = "https://docs.rs/init-data-rs"
readme = "README.md"
keywords = ["telegram", "mini-apps", "validation", "parser", "web-app"]
categories = ["authentication", "parser-implementations", "web-programming"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
hex = "0.4.3"
url = "2.5.4"
thiserror = "2.0.11"