[package]
name = "init-data-rs"
version = "0.1.2"
edition = "2021"
description = "Telegram Mini Apps init data parser and validator for Rust"
license = "MIT"
authors = ["Jie Wang <linsijia628@gmail.com>"]
repository = "https://github.com/escwxyz/init-data-rs"
documentation = "https://docs.rs/init-data-rs"
readme = "README.md"
keywords = ["telegram", "mini-apps", "validation", "parser", "web-app"]
categories = ["authentication", "parser-implementations", "web-programming"]

[dependencies]
base64 = "0.22.1"
ed25519-dalek = "2.2.0"
hex = "0.4.3"
hmac = { version = "0.13.0-rc.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = { version = "0.11.0-rc.0" }
thiserror = "2.0.12"
url = "2.5.4"
